--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Infinite Scroll</title>
     <link rel="icon" type="image/png" href="http://www.google.com/s2/favicons?domain=https://truthamidstruins.video.blog/">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader" >
         <img src="loader.svg" alt="Loading">
     </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
